// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UX visual regression > alumno sin token mantiene layout de acceso 1`] = `
<DocumentFragment>
  <section
    class="card anim-entrada portal-alumno-shell"
  >
    <div
      class="cabecera"
    >
      <p
        class="eyebrow"
      >
        <svg
          aria-hidden="true"
          class="icono"
          data-icono="alumno"
          fill="none"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z"
            stroke="currentColor"
            stroke-width="2"
          />
          <path
            d="M4 21c1.5-4 5-6 8-6s6.5 2 8 6"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
         Portal Alumno
      </p>
      <div
        class="cabecera__acciones"
      >
        <button
          class="chip chip-version"
          title="Abrir información de versión"
          type="button"
        >
          v0.0.0
        </button>
        <button
          aria-label="Tema: Oscuro"
          class="boton secundario boton--tema"
          title="Cambiar tema (Auto / Claro / Oscuro)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icono"
            height="18"
            viewBox="0 0 24 24"
            width="18"
          >
            <path
              d="M21 14.5A7.5 7.5 0 0 1 9.5 3a6.5 6.5 0 1 0 11.5 11.5Z"
              fill="none"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <span
            class="boton--temaTexto"
          >
            Tema: Oscuro
          </span>
        </button>
      </div>
    </div>
    <div
      class="auth-grid"
    >
      <div
        class="auth-hero auth-hero--alumno"
      >
        <p
          class="eyebrow"
        >
          Acceso
        </p>
        <h2>
          <svg
            aria-hidden="true"
            class="icono"
            data-icono="alumno"
            fill="none"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M4 21c1.5-4 5-6 8-6s6.5 2 8 6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
           Consulta de resultados
        </h2>
        <p
          class="auth-subtitulo"
        >
          Ingresa con el codigo de acceso que te compartio tu docente y tu matricula.
        </p>
        <ul
          aria-label="Beneficios"
          class="auth-beneficios"
        >
          <li>
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="ok"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 12l2 2 4-5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             Consulta rapida y segura.
          </li>
          <li>
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="pdf"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Z"
                stroke="currentColor"
                stroke-width="2"
              />
              <path
                d="M14 3v4h4"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M8 13h8"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M8 17h5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
             Descarga tu PDF cuando este disponible.
          </li>
          <li>
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="info"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17v-5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M12 8h.01"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="3"
              />
              <path
                d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z"
                stroke="currentColor"
                stroke-width="2"
              />
            </svg>
             Si no aparece, intenta recargar.
          </li>
        </ul>
        <div
          aria-hidden="true"
          class="portal-alumno-badges"
        >
          <span
            class="portal-alumno-badge"
          >
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="ok"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 12l2 2 4-5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             Verificado
          </span>
          <span
            class="portal-alumno-badge"
          >
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="pdf"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Z"
                stroke="currentColor"
                stroke-width="2"
              />
              <path
                d="M14 3v4h4"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M8 13h8"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M8 17h5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
             PDF
          </span>
          <span
            class="portal-alumno-badge"
          >
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="info"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17v-5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M12 8h.01"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="3"
              />
              <path
                d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z"
                stroke="currentColor"
                stroke-width="2"
              />
            </svg>
             Historial
          </span>
        </div>
        <div
          aria-hidden="true"
          class="auth-ilustracion"
        >
          <div
            class="auth-blob"
          />
          <div
            class="auth-blob auth-blob--2"
          />
        </div>
      </div>
      <div
        class="auth-form"
      >
        <label
          class="campo"
          for="campo-_r_0_"
        >
          Codigo de acceso
          <input
            autocapitalize="characters"
            autocomplete="one-time-code"
            autocorrect="off"
            id="campo-_r_0_"
            inputmode="text"
            placeholder="ABC123"
            spellcheck="false"
            value=""
          />
        </label>
        <label
          class="campo"
          for="campo-_r_1_"
        >
          Matricula
          <input
            autocapitalize="none"
            autocomplete="username"
            autocorrect="off"
            id="campo-_r_1_"
            inputmode="text"
            placeholder="2024-001"
            spellcheck="false"
            value=""
          />
        </label>
        <p
          class="nota"
        >
          Si no ves resultados tras ingresar, intenta "Recargar". Si el codigo expiro, solicita uno nuevo al docente.
        </p>
        <button
          class="boton"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icono"
            data-icono="entrar"
            fill="none"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 7l1-4H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h10l-1-4"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M12 12h9"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M18 9l3 3-3 3"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Consultar
        </button>
        <aside
          aria-label="Ayuda: Como consultar sin errores"
          class="panel helper-panel"
        >
          <p
            class="eyebrow"
          >
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="info"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17v-5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M12 8h.01"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="3"
              />
              <path
                d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z"
                stroke="currentColor"
                stroke-width="2"
              />
            </svg>
             Guia rapida
          </p>
          <h3>
            Como consultar sin errores
          </h3>
          <p
            class="nota"
          >
            Sigue esta secuencia para evitar bloqueos por codigo o matricula.
          </p>
          <ol
            class="helper-panel__pasos"
          >
            <li>
              Usa el codigo de acceso mas reciente compartido por tu docente.
            </li>
            <li>
              Escribe tu matricula sin espacios y revisa que tenga el formato esperado.
            </li>
            <li>
              Si no hay resultados, pulsa Recargar antes de volver a ingresar.
            </li>
          </ol>
          <div
            class="helper-panel__notas"
          >
            <p
              class="mensaje"
              role="status"
            >
              <svg
                aria-hidden="true"
                class="icono"
                data-icono="info"
                fill="none"
                height="18"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 17v-5"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="2"
                />
                <path
                  d="M12 8h.01"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="3"
                />
                <path
                  d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </svg>
               Si necesitas aclarar una respuesta, abre el detalle del folio y usa “Solicitar revision de marcadas”.
            </p>
          </div>
        </aside>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UX visual regression > docente sin token mantiene layout de acceso 1`] = `
<DocumentFragment>
  <section
    class="card anim-entrada"
  >
    <div
      class="cabecera"
    >
      <div>
        <p
          class="eyebrow"
        >
          <svg
            aria-hidden="true"
            class="icono"
            data-icono="docente"
            fill="none"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 19h16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M8 17V7a4 4 0 1 1 8 0v10"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
           Plataforma Docente
        </p>
        <h1>
          Banco y Examenes
        </h1>
      </div>
      <div
        class="cabecera__acciones"
      >
        <button
          class="chip chip-version"
          title="Abrir información de versión"
          type="button"
        >
          v0.0.0
        </button>
        <button
          aria-label="Tema: Oscuro"
          class="boton secundario boton--tema"
          title="Cambiar tema (Auto / Claro / Oscuro)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icono"
            height="18"
            viewBox="0 0 24 24"
            width="18"
          >
            <path
              d="M21 14.5A7.5 7.5 0 0 1 9.5 3a6.5 6.5 0 1 0 11.5 11.5Z"
              fill="none"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <span
            class="boton--temaTexto"
          >
            Tema: Oscuro
          </span>
        </button>
      </div>
    </div>
    <div
      class="auth-grid"
    >
      <div
        class="auth-hero"
      >
        <p
          class="eyebrow"
        >
          Acceso
        </p>
        <h2>
          <svg
            aria-hidden="true"
            class="icono"
            data-icono="docente"
            fill="none"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 19h16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M8 17V7a4 4 0 1 1 8 0v10"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
           Acceso docente
        </h2>
        <p
          class="auth-subtitulo"
        >
          Entra al banco, examenes y calificacion.
        </p>
        <ul
          aria-label="Beneficios"
          class="auth-beneficios"
        >
          <li>
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="ok"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 12l2 2 4-5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             Sesion persistente segura (refresh token httpOnly).
          </li>
          <li>
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="inicio"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 11.5 12 4l8 7.5V21a1 1 0 0 1-1 1h-5v-6H10v6H5a1 1 0 0 1-1-1v-9.5Z"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             Acceso con correo y contrasena.
          </li>
          <li>
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="banco"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6a2 2 0 0 1 2-2h11a2 2 0 0 1 2 2v14H6a2 2 0 0 0-2 2V6Z"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M6 20h13"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M8 8h8M8 12h6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
             Todo en un solo panel.
          </li>
        </ul>
        <div
          aria-hidden="true"
          class="auth-ilustracion"
        >
          <div
            class="auth-blob"
          />
          <div
            class="auth-blob auth-blob--2"
          />
        </div>
      </div>
      <div
        class="auth-form"
      >
        <p
          class="mensaje"
          role="status"
        >
          <svg
            aria-hidden="true"
            class="icono"
            data-icono="info"
            fill="none"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 17v-5"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M12 8h.01"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="3"
            />
            <path
              d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
           Inicio de sesion con Google deshabilitado en este entorno. Para habilitarlo en desarrollo, define VITE_GOOGLE_CLIENT_ID en el .env del root y reinicia Vite.
        </p>
        <div
          class="acciones"
        >
          <button
            class="boton"
            type="button"
          >
            Ingresar
          </button>
          <button
            class="boton secundario"
            type="button"
          >
            Registrar
          </button>
        </div>
        <label
          class="campo"
        >
          Correo
          <input
            autocomplete="email"
            type="email"
            value=""
          />
        </label>
        <label
          class="campo"
        >
          Contrasena
          <input
            autocomplete="current-password"
            type="password"
            value=""
          />
        </label>
        <div
          class="acciones"
        >
          <button
            class="boton"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="entrar"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 7l1-4H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h10l-1-4"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M12 12h9"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M18 9l3 3-3 3"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            Ingresar
          </button>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
